<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.onBoarding.OnBoardingActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_onBoard"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:scaleType="centerCrop"
        android:src="@drawable/on_boarding"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/BottomRoundedImageView" />

    <TextView
        android:id="@+id/tv_onBoard_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/text_color"
        android:fontFamily="@font/poppins"
        android:text="@string/on_board_tittle"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_onBoard" />

    <TextView
        android:id="@+id/tv_onBoard_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:padding="16dp"
        android:text="@string/text_onBoard_desc"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/gray_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onBoard_tittle" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/get_started"
        app:backgroundTint="@null"
        android:background="@drawable/bg_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onBoard_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>
