<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/swipe_refresh"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"

        >
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/very_light_gray"
        app:cardCornerRadius="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/profile_picture" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/name"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_home_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/sf_ui_display_regular"
        android:text="@string/tittle_home"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/cv_profile"
        app:layout_constraintTop_toBottomOf="@id/cv_profile" />

    <TextView
        android:id="@+id/tv_best"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/sf_ui_display_regular"
        android:text="@string/best_destination"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_home_tittle"
        app:layout_constraintTop_toBottomOf="@id/tv_home_tittle" />

        <TextView
            android:id="@+id/tv_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View All"
            android:textSize="14sp"
            android:textColor="@color/orange"
            app:layout_constraintTop_toTopOf="@id/tv_best"
            app:layout_constraintBottom_toBottomOf="@id/tv_best"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_tourism"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_best"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/rv_tourism"/>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:id="@+id/shimmer_layout"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_best">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/item_tourism_shimmer" />

            <include layout="@layout/item_tourism_shimmer" />

            <include layout="@layout/item_tourism_shimmer" />

            <include layout="@layout/item_tourism_shimmer" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>