<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ProfileFragment">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/sf_ui_display_regular"
        android:text="@string/name"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/iv_profile"
        app:layout_constraintStart_toStartOf="@id/iv_profile"
        app:layout_constraintTop_toBottomOf="@id/iv_profile" />

    <TextView
        android:id="@+id/tv_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/sf_ui_display_regular"
        android:text="@string/text_email"
        android:textColor="@color/gray_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/tv_profile_name"
        app:layout_constraintStart_toStartOf="@id/tv_profile_name"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_name" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_email">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_profile_item"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/profile"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_profile_item"
                app:layout_constraintStart_toEndOf="@id/iv_profile_item"
                app:layout_constraintTop_toTopOf="@id/iv_profile_item" />

            <ImageView
                android:id="@+id/iv_arrow_profile"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/cv_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_preference"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_preference"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/baseline_settings_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_preference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/preference"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_preference"
                app:layout_constraintStart_toEndOf="@id/iv_preference"
                app:layout_constraintTop_toTopOf="@id/iv_preference" />

            <ImageView
                android:id="@+id/iv_arrow_preference"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/cv_preference">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_logout"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/baseline_logout_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="Logout"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_logout"
                app:layout_constraintStart_toEndOf="@id/iv_logout"
                app:layout_constraintTop_toTopOf="@id/iv_logout" />

            <ImageView
                android:id="@+id/iv_arrow_logout"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/arrow_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>